Rename domain/service to domain/services + Add config/ + Add controler file for UI